--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-    @font-face {
+@font-face {
       font-family: Outfit;
       src: url(assets/fonts/outfit/Outfit-VariableFont_wght.ttf);
     }
@@ -112,10 +112,10 @@
     td{
       padding: 8px 53px 16px 38px;
     }
-    #txt{
+    .txt{
       color: hsl(30, 10%, 34%);
     }
-    #num{
+    .num{
       color: hsl(14, 45%, 36%);
       font-weight: 600;
       text-align: left;
